--- a/src/hub.html
+++ b/src/hub.html
@@ -1156,7 +1156,7 @@
                     <a-rounded height="0.08" width="0.2" color="#000000" position="-0.44 -0.045 0" radius="0.040" opacity="0.35" class="hud bg"></a-rounded>
                     <a-image scale="0.07 0.06 0.06" position="-0.38 -0.005 0.001" src="#presence-count" material="alphaTest:0.1;"></a-image>
                     <a-entity id="hud-presence-count" text="value: ; width:1.1; align:center;" position="-0.30 -0.005 0" matrix-auto-update="target: text;">
-                      <a-entity id="hud-presence-notification" text="value: ; width:1.1; align:center; color: #FF3464;" position="0.04 0.005 0" matrix-auto-update="target: text;"></a-entity>
+                        <a-entity id="hud-presence-notification" text="value: ; width:1.1; align:center; color: #FF3464;" position="0.04 0.005 0" matrix-auto-update="target: text;"></a-entity>
                     </a-entity>
                     <a-entity class="invite-btn" position="0 0.18 0" scale="0.7 0.7 0.7" is-remote-hover-target tags="singleActionButton: true;">
                         <a-entity mixin="rounded-text-action-button" slice9="width: 0.7" scale="0.8 0.8 1.0">
@@ -1386,7 +1386,9 @@
             position="-44.5 1.5 -10.6"
             networked="template: #static-game-avatar"
         ></a-entity>
-        
+        <a-entity chess-score-pad chess-notation-controls position="5 14 -20"></a-entity>
+        <a-entity chess-game-status position="-5 14 -20"></a-entity>
+        <a-box color="#c0c" depth="0.3" height="0.3" width="0.3" position="0 2 0" chess-game-controls></a-box>
     </a-scene>
 
     <div id="ui-root"></div>
