--- a/src/hub.html
+++ b/src/hub.html
@@ -855,7 +855,7 @@
                         position="0 0.225 0"
                         class="video-snap-button"
                     ></a-entity>
-                    <a-entity mixin="rounded-share-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" immers-share-button="public" position="-0.23 0.285 0.001">
+                    <a-entity mixin="rounded-share-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" immers-share-button="public" visibility-on-content-types="contentTypes: video/mp4; contentSubtype: video-camera; visible: true;" position="-0.23 0.285 0.001">
                       <a-entity text=" value:share\npublicly; width:1.25; align:center;" text-raycast-hack position="0.05 0 0.02"></a-entity>
                       <a-entity
                           sprite
@@ -864,7 +864,7 @@
                           position="-0.145 0.005 0.001"
                       ></a-entity>
                     </a-entity>
-                    <a-entity mixin="rounded-share-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" immers-share-button="friends" position="0.23 0.285 0.001">
+                    <a-entity mixin="rounded-share-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" immers-share-button="friends" visibility-on-content-types="contentTypes: video/mp4; contentSubtype: video-camera; visible: true;" position="0.23 0.285 0.001">
                       <a-entity text=" value:share\nwith friends; width:1.25; align:center;" text-raycast-hack position="0.05 0 0.02"></a-entity>
                       <a-entity
                           sprite
